--- a/agenda.html
+++ b/agenda.html
@@ -1,11 +1,12 @@
 ---
 layout: default
-title: Blog
+title: Agenda
 ---
 <h1>Latest Posts</h1>
 
 <ul>
-  {% for post in site.posts %}
+  {% assign sorted_posts = site.agenda | sort: 'date' | reverse %}
+  {% for post in sorted_posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.date | date_to_string}} - {{ post.title }}</a></h2>
       {{ post.excerpt }}
